--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/styles/index.css" />
-    <link rel="stylesheet" href="/src/styles/globalStyles.css" />
-    <link rel="stylesheet" href="/src/styles/reset.css" />
-    <script defer src="/src/scripts/script.js" defer></script>
+    <link rel="stylesheet" href="./src/styles/index.css" />
+    <link rel="stylesheet" href="./src/styles/globalStyles.css" />
+    <link rel="stylesheet" href="./src/styles/reset.css" />
+    <script defer src="./src/scripts/script.js" defer></script>
     <title>Página Institucional Genérica</title>
   </head>
   <body>
