--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- ====== Header ====== -->
     <header>
       <div>
-        <img src="src/assets/image.png" alt="header-img" />
+        <img href="src/assets/image.png" alt="header-img" />
         <button id="join-classes-1">Entrar para próxima turma</button>
       </div>
     </header>
@@ -194,7 +194,7 @@
 
     <!-- ====== Footer ====== -->
     <footer>
-      <img src="src/assets/image copy.png" alt="footer-img" />
+      <img href="src/assets/image copy.png" alt="footer-img" />
     </footer>
 
     <!-- ====== Modal ====== -->
